@@ -226,6 +226,7 @@ Robin Green
 Rob Oxspring
 Rob van Oostrum
 Roger Vaughn
+Roman Ivashin
 Ronen Mashal
 Russell Gold
 Sam Ruby
